# azure-iot-scale

./: .env-example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.clinerules/: 01-coding.md
bug_bash/: README.md  cert_test.py  config-template.json  requirements.txt
deploy/: hub-gen2.sh  loadtest.sh
deploy/loadtest-configs/: README.md  adr-device-patch-user.yaml.example  adr-user.yaml.example  cert-hub-connect-user.yaml.example  cert-user.yaml.example  http-user.yaml.example
scripts/: adr_test.py
src/: provision.py
src/locust_pkg/: adr_device_patch_user.py  adr_test.py  adr_user.py  adr_utils.py  cert_hub_connect.py  cert_test.py  cert_user.py  cert_user_throttle.py  dps_user.py  http_user.py  hub_cert_device.py  locustfile.py  provision.py  storage.py  test_config.py  utils.py
tests/: test_placeholder.py  test_utils.py
wheels/: azure_iot_device-2.14.0-py3-none-any.whl  azure_iot_device-2.14.0-test-2-py3-none-any.whl  azure_iot_device-2.14.0-test-py3-none-any.whl
